Raise admit knee: O(1) open-order count, admit batch, gate snapshot.
Incremental openOrdersCount removes O(book) scan per cluster message;
enable admit batch on pop ingress; cache venue gate health without per-request
DB; decouple egress route offer from replay; virtual-thread ER pool;
projector poll-batch commits; coalesce tests.

Co-authored-by: Cursor <cursoragent@cursor.com>